--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
       <div class="justify-self-start">
         <a href="/" class="flex items-center gap-3 group">
           <div id="nav-logo-box" class="w-11 h-11 rounded-xl bg-background/95 backdrop-blur-sm ring-1 ring-black/5 flex items-center justify-center shadow-sm overflow-hidden transition-transform duration-300 group-hover:scale-105">
-            <img src="{% static 'images/icon-harp.png' %}" alt="Harpans" class="w-full h-full object-cover">
+            <img src="{% static 'images/icon-harp-final.png' %}" alt="Harpans" class="w-full h-full object-cover">
           </div>
         </a>
       </div>
