--- a/templates/base.html
+++ b/templates/base.html
@@ -213,8 +213,8 @@
     <div class="grid md:grid-cols-4 gap-8 mb-8">
       <div>
         <div class="flex items-center gap-3 mb-4">
-          <div class="w-16 h-16 bg-white rounded-lg flex items-center justify-center overflow-hidden">
-            <img src="{% static 'images/icon-harp-final.png' %}" alt="Harpans" class="w-8 h-8 object-contain">
+          <div class="w-16 h-16 rounded-lg flex items-center justify-center overflow-hidden">
+            <img src="{% static 'images/icon-harp-final.png' %}" alt="Harpans" class="w-14 h-14 object-contain">
           </div>
           <span class="text-xl font-bold">Harpans</span>
         </div>
