--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
   <div class="h-20 px-4 flex items-center justify-between border-b border-gray-100">
     <div class="flex items-center gap-3">
       <div class="w-10 h-10 rounded-xl bg-background/95 ring-1 ring-black/5 overflow-hidden">
-        <img src="{% static 'images/icon-harp.png' %}" alt="Harpans" class="w-full h-full object-cover">
+        <img src="{% static 'images/icon-harp-final.png' %}" alt="Harpans" class="w-full h-full object-cover">
       </div>
       <div class="leading-none">
         <div class="font-bold text-primary-900">Harpans</div>
