added styles and more logic

--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -313,7 +313,7 @@
   </div>
 </section>
 
-{# KONTAKTINFO + PORTAL – endast info, utan formulär #}
+{# KONTAKTINFO + PORTAL - endast info, utan formulär #}
 <section class="py-16 bg-white">
   <div class="container mx-auto px-4">
     <div class="max-w-6xl mx-auto opacity-0" data-scroll style="animation-delay: 200ms">
