--- a/templates/base.html
+++ b/templates/base.html
@@ -98,10 +98,12 @@
       <div class="justify-self-center">
         <a href="/"
           id="nav-brand"
-          class="flex flex-col items-center text-center leading-none select-none">
+          class="flex flex-col items-center text-center leading-none select-none group">
 
-          <!-- DESKTOP: text-logga, staplade -->
-          <div id="nav-logo-box" class="w-16 h-16 rounded-xl bg-background/95 backdrop-blur-sm ring-1 ring-black/5 flex items-center justify-center shadow-sm overflow-hidden transition-transform duration-300 group-hover:scale-105">
+          <div id="nav-logo-box"
+              class="w-20 h-20 rounded-xl bg-background/95 backdrop-blur-sm ring-1 ring-black/5
+                      flex items-center justify-center shadow-sm overflow-hidden
+                      transition-transform duration-300 group-hover:scale-105">
             <img src="{% static 'images/icon-harp-final.png' %}" alt="Harpans" class="w-full h-full object-cover">
           </div>
         </a>
