added more styling and icons

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static wagtailsettings_tags %}
+{% load static wagtailsettings_tags wagtailcore_tags %}
 {% get_settings %}
 
 {% block content %}
