--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{% static 'css/output.css' %}">
+  <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+
 
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="https://unpkg.com/htmx.org@1.9.10"></script>
