added more styling and icons

--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -190,7 +190,7 @@
             </h2>
           <p class="text-gray-600">
             Fyll i formuläret nedan om du vill att vi ringer upp dig.
-            Du kan också välja formuläret bredvid om du föredrar att skicka ett meddelande.
+            Du kan också välja formuläret bredvid om du vill skicka ett meddelande.
           </p>
           </div>
 
