--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -38,7 +38,7 @@
           </h2>
           <p class="text-gray-600">
             Fyll i formuläret nedan så återkommer vi via e-post. 
-            Du kan också välja formuläret bredvid om du föredrar att vi ringer upp.
+            Du kan också välja formuläret bredvid om du föredrar att vi ringer upp dig när det passar.
           </p>
         </div>
 
